--- a/dev/sass/qwiki/_forms.scss
+++ b/dev/sass/qwiki/_forms.scss
@@ -85,7 +85,7 @@ select {
     }
   }
   label + input{
-    margin: rem-calc(8 0 0 0);
+    margin: rem-calc(4 0 0 0);
   }
 }
 
